intel/bench_214_new/extr_.BGAQRCode-Androidzbarsrcmainjnilibiconv-1.15libhkscs2004.h_hkscs2004_wctomb_with_main/log.txt
bench_214_new/extr_.BGAQRCode-Androidzbarsrcmainjnilibiconv-1.15libhkscs2004.h_hkscs2004_wctomb_with_main/extr_.BGAQRCode-Androidzbarsrcmainjnilibiconv-1.15libhkscs2004.h_hkscs2004_wctomb_with_main.c:76:32: error: use of undeclared identifier 'NULL'
    const Summary16 *summary = NULL;
                               ^
1 error generated.
HLS FPGA Parse FAILED.
